fixed some images size, wrapped them into picture tag

--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -18,7 +18,6 @@
     background-image: url("../images/icons/icon-phone.svg");
     position: relative;
 
-
     &::before,
     &::after {
       position: absolute;
@@ -31,14 +30,14 @@
     }
 
     &::after {
-      content: 'The Met Fifth Avenue';
+      content: "The Met Fifth Avenue";
       position: absolute;
       left: -216px;
       top: 0;
     }
 
     &::before {
-      content: '+1 212-535-7710';
+      content: "+1 212-535-7710";
       position: absolute;
       left: -145px;
       top: 1.2em;
